# Wulfenstein-3D-project

./: CMakeLists.txt  Makefile  README.md  a.out  cub3d  cube3d  main  main.c  parser.c  rc_s.co  run.sh
include/: cub3d.h  cub3d.h.gch  mlx.h.gch
lodev/: lod.c
maps/: .1.cub.un~  .2.cub.un~  .cub  1.cub  2.cu1  2.cub  3.cub
minilibx/: mlx.h  mlx0.h
mlx/: mlx1.h  mlx_png.c  mlx_string_put.c  mlx_xpm.c
sprites/: .barrel.xpm.un~  barrel.xpm  barrel.xpm~  colorstone.xpm  lola.xpm  lolaa.xpm  mossy.xpm  purplestone.xpm  redbrick.xpm  te.xpm  te1.xpm  te2.xpm  te3.xpm  tex3.xpm
srcs/: .cal_sort.c.swp  .main.c.un~  c_clr.c  cal_sort.c  cre_rgb.c  f_clr.c  ft_all_mlx.c  ft_che_arg.c  ft_color_check.c  ft_draw.c  ft_draw1.c  ft_draw2.c  ft_draw3.c  ft_draw4.c  ft_draw5.c  ft_draw_spr.c  ft_draw_spr1.c  ft_draw_spr2.c  ft_draw_spr3.c  ft_draw_util.c  ft_error_close.c  ft_fl_ce_cst.c  ft_free_all.c  ft_free_line.c  ft_free_mem.c  ft_get_null.c  ft_get_scr.c  ft_get_valid.c  ft_if_def.c  ft_init_all.c  ft_key_ev.c  ft_key_init.c  ft_key_prs.c  ft_key_rel.c  ft_main_parser.c  ft_map_anal.c  ft_map_copy.c  ft_map_hard_anal.c  ft_map_init.c  ft_map_parse.c  (+35 more)
srcs/libft/: Makefile  ft_atoi.c  ft_atol.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isupper.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  (+25 more)
tests_for_cub3d/: gnl_test.c  hui.c  mlx.c
(+32 files in other folders)
