cmake_minimum_required(VERSION 3.17)
project(cube3D C)
set(CMAKE_C_STANDARD  99)
#SET(CMAKE_C_FLAGS "-framework OpenGL -framework Appkit")
#SET(CMAKE_C_FLAGS "-lXext -lX11 -lm -lz -lbsd")
        #"-Wall -Wextra -Werror")
file(GLOB SOURCE_FILES *.c ./srcs/libft/*.c ./srcs/*.c ./include/*.h ./srcs/libft/*.h)
        #./include/libmlx.a)
add_executable(cube3D ${SOURCE_FILES})